Fix overlapping faq

--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,8 @@
     border: 1px solid #03b5d2;
   }
   .accordion button .accordion-title {
-    padding: 1em 1.5em 1em 0;
+    display: inline-block;
+    padding: 0 1.5em 0 0;
   }
   .accordion button .icon {
     display: inline-block;
